nobase_include_HEADERS = \
	kernaux.h                         \
	kernaux/arch/i386.h               \
	kernaux/arch/i386-idt.h           \
	kernaux/arch/riscv64.h            \
	kernaux/arch/x86_64.h             \
	kernaux/arch/x86.h                \
	kernaux/asm/i386.h                \
	kernaux/asm/riscv64.h             \
	kernaux/asm/x86_64.h              \
	kernaux/asm/x86.h                 \
	kernaux/assert.h                  \
	kernaux/cmdline.h                 \
	kernaux/elf.h                     \
	kernaux/free_list.h               \
	kernaux/generic/display.h         \
	kernaux/generic/malloc.h          \
	kernaux/generic/mutex.h           \
	kernaux/macro.h                   \
	kernaux/macro/packing_end.run     \
	kernaux/macro/packing_start.run   \
	kernaux/mbr.h                     \
	kernaux/memmap.h                  \
	kernaux/multiboot2.h              \
	kernaux/multiboot2/header_macro.h \
	kernaux/ntoa.h                    \
	kernaux/pfa.h                     \
	kernaux/printf_fmt.h              \
	kernaux/printf.h                  \
	kernaux/units.h                   \
	kernaux/version.h
